@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/tla
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/tla/ChangeLog,v 1.43 2007/01/23 15:20:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/tla/ChangeLog,v 1.44 2007/02/11 21:52:43 grobian Exp $
+
+  11 Feb 2007; Fabian Groffen <grobian@gentoo.org> tla-1.3.3-r1.ebuild,
+  tla-1.3.4.ebuild, tla-1.3.5.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   23 Jan 2007; Jeroen Roovers <jer@gentoo.org> tla-1.3.5.ebuild:
   Stable for HPPA (bug #143099).
